# companyDemo

./: .gitignore  CMakeLists.txt  README.md
UI/: CusConfig.qml  main.qml  main.qml.autosave  qml.qrc
UI/Account/: Account.cpp  Account.h  Login.cpp  Login.h  Login.ui  SqlManager.cpp  SqlManager.h  SqlSampleId.cpp  SqlSampleId.h
UI/AlgorithmCore/: AbstractAlgorithmType.cpp  AbstractAlgorithmType.h  AlgorithDataPool.cpp  AlgorithDataPool.h  AlgorithmDataCore.cpp  AlgorithmDataCore.h  AlgorithmManager.cpp  AlgorithmManager.h  AlgorithmWheat.cpp  AlgorithmWheat.h
UI/BoardCore/: BoardInterface.cpp  BoardInterface.h  BoardProperty.cpp  BoardProperty.h
UI/CameraCore/: AbstractCameraState.cpp  AbstractCameraState.h  CameraInterface.cpp  CameraInterface.h  CameraProperty.cpp  CameraProperty.h  CameraTaskWork.cpp  CameraTaskWork.h  FlowControl.cpp  FlowControl.h  FrameDateCore.cpp  FrameDateCore.h  RequireImage.cpp  RequireImage.h  ViewProvider.cpp  ViewProvider.h
UI/CustomPane/: CustomBoardStatus.qml  CustomCenterPane.qml
UI/CustomPane/CustomItem/: CustomDetection.qml  CustomDetectionResult.qml  CustomHelpDialog.qml  CustomImgResult.qml  CustomPieSeries.qml  CustomRecord.qml  CustomSampleId.qml
UI/Log4Qt/: CMakeLists.txt
UI/Log4Qt/src/log4qt/: logmanager.cpp  systemlogappender.cpp
UI/Maintain/: MaintainBorderShadow.qml  MaintainCenterPane.qml  MaintainContentPane.qml  MaintainHomePane.qml  MaintainTitlePane.qml
UI/Maintain/MaintainItem/: MaintainFlowCameraSetting.qml  MaintainHardwareSetting.qml
UI/NormalPane/: DetectPane.qml  DeviceStatus.qml  NormalCenterPane.qml  NormalTitlePane.qml  RecordPane.qml
UI/NormalPane/ContentItem/: DetectResultPane.qml  DisplaySegmentImg.qml  HeaderDelegate.qml  HelpDialog.qml  HomePage.qml  InputCalendar.qml  InputSampleId.qml  ResizableColumnHeader.qml
UI/Pane/: ContentPane.qml  LeftPane.qml  RightPane.qml  TitlePane.qml
UI/Qss/: customButton.qss  login.qss
UI/TableModel/: RecordBaseModel.hpp  RecordWheatModel.cpp  RecordWheatModel.h  WheatItem.cpp  WheatItem.h
UI/common/: BasicTooptip.qml  CMessageBox.cpp  CMessageBox.h  CMessageBox.ui  CellView.qml  CircleWave.qml  CusBusyIndicator.qml  CusButtom.qml  CusButton_Image.qml  CusCalendar.qml  CusCheckBox.qml  CusComboBox.qml  CusDialog.qml  CusDisplayImage.qml  CusFloderDialog.qml  CusInputText.qml  CusKeyboard.qml  CusPageIndicator.qml  CusRadusButton.qml  CusScaImage.qml  CusShadow.qml  CusShape_Button.qml  CusSpinBox.qml  CusTabButton.qml  CusText.qml  CustomButton.cpp  CustomButton.h  CustomSplashScreen.cpp  CustomSplashScreen.h  GKeyBoard.cpp  GKeyBoard.h  GlobalParameter.cpp  GlobalParameter.h  Gzlogger.h  Logger.cpp  Logger.h  RadusBoder.qml  ResizableColumnHeader.qml  SelectGrainPane.qml
UI/dirver/: dirver.cpp  dirver.h
UI/main/: FrameLessView.cpp  FrameLessView.h  main.cpp
UI/qtxlsx/: CMakeLists.txt  xlsxcolor.cpp
UI/setting/: AdjustSetting.qml  CameraSetting.qml  LightSetting.qml  MotorSetting.qml  WeightSetting.qml
algorithm/: CMakeLists.txt
algorithm/graineval/: CMakeLists.txt  dcdf.cpp  dcdf.h  graineval_api.hpp
algorithm/graineval/examples/: CMakeLists.txt  demo_graineval.cpp
algorithm/im_saving/: CMakeLists.txt  dcdf_save.cpp  dcdf_save.h  ge_save.h
algorithm/im_saving/examples/: CMakeLists.txt  demo_imsave.cpp
calibrate/: CMakeLists.txt  calibrate.cpp  calibrate.h
calibrate/examples/: CMakeLists.txt  demo_calibrate.cpp
core/: FrameLessView.h  FrameLessView_unix.cpp  boardcontrol.cpp  boardcontrol.h  config.json  gzcamera.cpp  gzcamera.h  main.cpp  systemusagerate.h  systemusagerate_unix.cpp
core/ProjectShow/: ManagerMath.cpp  ManagerMath.h  MathBaseModel.cpp  MathBaseModel.h  MathWheatModel.cpp  MathWheatModel.h  RecordManager.cpp  RecordManager.h  TaskMath.cpp  TaskMath.h
core/ProjectShow/RecordTable/: ItemWheat.cpp  ItemWheat.h  RecordBaseModel.hpp  RecordWheatModel.cpp  RecordWheatModel.h
core/ProjectShow/interface/: gz_algo_type.h  gz_graineval_api.h  gz_graineval_para.h
core/ProjectShow/sql/: RecordSql.cpp  RecordSql.h  SqlManager.cpp  SqlManager.h
core/database/: G1000.db
core/include/: board_plugin_api.hpp  camera_api.hpp
generator/: CMakeLists.txt  dcdf_generator.cpp  dcdf_generator.h  flow_control.cpp  flow_control.h  flow_state.cpp  flow_state.h
generator/examples/: CMakeLists.txt  demo_dcdf.cpp
logging/: CMakeLists.txt  demo_log.cpp  log.cpp  log.h  terminal.h
module/: CMakeLists.txt  def.h
module/board/: CMakeLists.txt  board.cpp  board.h  board_plugin_api.hpp  driver.cpp  driver.h
module/board/examples/: CMakeLists.txt  demo_board.cpp
module/camera/: CMakeLists.txt  camera.cpp  camera.h  camera_api.hpp  common.h  driver.cpp  driver.h
module/camera/examples/: CMakeLists.txt  demo_camera.cpp
pack/: Ai-P600.desktop  config.ini  config.json  pack.sh  start.sh
pack/DEBIAN/: control  postinst
pack/database/: P600.db
utils/: CMakeLists.txt  utils.cpp  utils.h
